@@ -9,7 +9,7 @@
     <leg id="l1" x="-2" y="0" target="v1" type="fermion"/>
     <leg id="l2" x="2" y="0" target="v2" type="fermion"/>
     <propagator id="p1" source="v1" target="v2" type="photon" bend="1"/>
-    <blob id="blob0" x="0" y="0" shape="circle" radius="0.5" label="$\Sigma$"/>
+    <blob id="blob0" x="0" y="0" shape="circle" radius="0.5" label="$\large\Sigma$"/>
     <connect id="b0c1" blob="blob0" dir="w" />
     <connect id="b0c2" blob="blob0" dir="e" />
     <propagator id="p2" source="v1" target="b0c1" type="fermion"/>
